# payments-engine

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  treefmt.nix
.gitea/workflows/: nix-ci.yml
src/: account.rs  csv.rs  main.rs  tx.rs  util.rs
testdata/: transactions.csv
