[package]
name = "payments-engine"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -3 }
nursery = { level = "warn", priority = -2 }
unwrap_used = { level = "warn", priority = -1 }
cognitive_complexity = { level = "allow", priority = 0 }

[dependencies]
color-eyre = "0.6.5"
csv = "1.4.0"
eyre = "0.6.12"
futures = "0.3.31"
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
