[package]
name = "payments-engine"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = 0 }
unwrap_used = { level = "warn", priority = 0 }
cognitive_complexity = { level = "allow", priority = 1 }

[dependencies]
csv = "1.4.0"
futures = "0.3.31"
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
